# ChloeVR

./: .gitignore  AGENTS.md  AUDIT_FIXES.md  AUDIT_PROMPT.md  CLAUDE-BUILD-GUIDE.md  CLAUDE.md  CODEX_STATUS.md  DANCE_REALISM_PLAN.md  FOR_CODEX_FROM_CLAUDE.md  ISSUES_FOR_CODEX.md  NOTES.md  PERFORMANCE_ATTACK_PLAN.md  PLAY-STORE-GUIDE.md  PRODUCTION_AUDIT.md  README.md  RENDERING_REALISM_PLAN.md  TIER3_PLAN.md  WORK_PLAN.md  quest_appdata_backup_2026-06-11.tar  samsung_xr_bug_report.md
.agent-roles/: CLAUDE.md  CODEX.md  GEMINI.md
.github/workflows/: ci.yml
docs/: TPOSE_PROMPT.md  privacy.html
galaxyxr_backup_2026-06-10/: _autosave.json  chloe_vr.xml  chloe_vr_settings.xml
prism/: settings.gradle.kts
prism/app/: build.gradle.kts  lint-baseline.xml  proguard-rules.pro
prism/app/src/galaxyxr/: AndroidManifest.xml
prism/app/src/galaxyxr/kotlin/com/ashairfoil/prism/: MainActivity.kt
prism/app/src/main/: AndroidManifest.xml
prism/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  openxr_input.cpp  openxr_input.h  renderer_jni_bridge.cpp  xr_light_estimation.h  xr_renderer.cpp  xr_renderer.h  xr_scene_occlusion.cpp  xr_scene_occlusion.h  xr_sensors.h  xr_spatial_anchors.cpp  xr_spatial_anchors.h
prism/app/src/main/kotlin/com/ashairfoil/prism/: FilePicker.kt  (+13 more)
prism/app/src/main/res/values/: strings.xml
prism/app/src/quest/: AndroidManifest.xml
prism/app/src/test/cpp/: controller_state_contract_test.cpp
tools/flesh_rig/: add_flesh_bones.py  verify_flesh_glb.py
tools/mixamo_extract/: README.md  bind_pose.py  extract_preset.py  fbx_anim.py  fbx_peek.py
(+64 files in other folders)
